--- a/style.css
+++ b/style.css
@@ -505,6 +505,31 @@ footer .news-col form button i {
         margin-left: auto;
         margin-right: auto;
     }
+    .skill{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .skill .right{
+        justify-content: space-between;
+    }
+    .skill .left .info h3{
+        font-size: 20opx;
+    }
+    footer .start{
+        top: -8%;
+    }
+    footer .start p{
+        display: none;
+    }
+    footer .cols .about-col{
+        flex-basis: 100%;
+        margin-bottom: 40px;
+    }
+    footer .cols .links-col{
+        flex-basis: 100%;
+        margin-bottom: 20px;
+    }
+
 
 
 }
