--- a/style.css
+++ b/style.css
@@ -529,7 +529,23 @@ footer .news-col form button i {
         flex-basis: 100%;
         margin-bottom: 20px;
     }
+     footer .cols .links-col{
+        flex-basis: 100%;
+        margin-bottom: 20px;
+    }
+    
+}
 
+@media screen and (max-width: 480px) {
+    .main p.title{
+        font-size: 18px;
+    }
+    .main p.subtitle{
+        font-size: 10px;
+    }
+    .guarantee .item .info h3{
+        font-size: 20px;
 
-
+    }
+    
 }
